syntax = "proto3";

option csharp_namespace = "MessengerAvalonia.Shared.LoginGrpc";

package Login;

service Loginer {
  rpc SignIn (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;	
}

message LoginResponse {
  bool Success = 1;
  string message = 2;
}